--- a/FreahVotes/src/main/resources/templates/homepage.html
+++ b/FreahVotes/src/main/resources/templates/homepage.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+
+<html xmlns:th="http://thymeleaf.org">
 <head>
 <title>FreshVotes HomePage</title>
 <body>
 <h1>Welcome to FreshVotes HomePage</h1>
 
-<a href="/logout">Logout</a>
+<form action="/logout" method="post">
+<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+<button type="submit" >logout</button>
+</form>
 </body>
 
 </head>
