--- a/FreahVotes/src/main/resources/templates/login.html
+++ b/FreahVotes/src/main/resources/templates/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xlmsn:tn="http://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
 <Title>FreshVotes Login Page</Title>
 </head>
 <body>
 <form action="/login" method="POST">
+<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     <fieldset>
         <legend>Please Login</legend>
         <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
